Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.15-dev-8350-g580824a https://github.com/reactos/reactos/commit/580824ae1f55a62a2f5503ef54b3204fb9c85094
Description
reactos-livecd-0.4.15-dev-8349-g6f277e9-x86-gcc-lin-dbg
reactos-livecd-0.4.15-dev-8350-g580824a-x86-gcc-lin-dbg
Guilty Commit : https://github.com/reactos/reactos/commit/580824ae1f55a62a2f5503ef54b3204fb9c85094 in PR https://github.com/reactos/reactos/pull/7141 attempting to fix CORE-12619 by katayama_hirofumi_mz
Likely due to "RenameItem" method being removed from CExplorerBand
- Open Explorer
- Enable Folder band
- Select a folder
- Leaving mouse over item
Nothing happens
Expected result : Edit mode triggered, doing the "Rename" action
F2 (as well as DEL) don't work either, but already logged in CORE-15720
Blocks CORE-19613

Attachments
Issue Links
- blocks
-
CORE-12619 Explorer treeview don't show new folders
-
- Resolved
-
-
CORE-19613 Explorer : "Rename" from "Folder" pane only work once
-
- Resolved
-
-
CORE-20735 File System "rename" in Explorer's treeview shall not allow forbidden chars
-
- Resolved
-
- relates to
-
CORE-15720 explorer filebrowser, it is impossible to use keyboard accelerators F2/del within the treeview
-
- Open
-