[SHDOCVW] Fix click to rename in Explorer tree (CORE-19797)

CORE-19797, CORE-19613